<resources>
    <string name="app_name">twu_bucket_list</string>
    <string name="your_twu_bucket_list" />
    <string name="describe_your_bucket_list_goal">Describe your bucket List Goal:</string>
    <string name="when_you_would_like_to_complete_your_goal">When you would like to complete your goal:</string>
    <string name="describe_your_bucket_list_goal_in_more_detail_here">Describe your bucket list goal in more detail here:</string>
    <string name="save_me">Save me</string>
    <string name="my_date">My Date</string>
    <string name="my_goal">My Goal</string>
    <string name="bucket_list_description">Bucket List Description</string>
    <string name="add_item">Add Item</string>
    <string name="title_activity_maps">Map</string>
</resources>